# ProjektJPO25

./: CMakeLists.txt  Doxyfile  README.md  airqualitymanager.cpp  airqualitymanager.h  mainwindow.cpp  mainwindow.h  requirements.txt  tests.cpp
html/: airqualitymanager_8h_source.html  annotated.html  annotated_dup.js  class_air_quality_manager-members.html  class_air_quality_manager.html  class_air_quality_manager.js  class_main_window-members.html  class_main_window.html  class_main_window.js  class_test_air_quality_monitor-members.html  class_test_air_quality_monitor.html  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  mainwindow_8h_source.html  navtreedata.js  navtreeindex0.js  struct_measurement-members.html  struct_measurement.html  struct_measurement.js  struct_sensor-members.html  struct_sensor.html  struct_sensor.js  struct_station-members.html  struct_station.html  struct_station.js
html/search/: all_0.js  all_2.js  all_3.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  classes_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_3.js
latex/: airqualitymanager_8h_source.tex  annotated.tex  class_air_quality_manager.eps  class_air_quality_manager.tex  class_main_window.tex  class_test_air_quality_monitor.eps  class_test_air_quality_monitor.tex  files.tex  hierarchy.tex  mainwindow_8h_source.tex  refman.tex  struct_measurement.tex  struct_sensor.tex  struct_station.tex
